# portrait_mode

./: .gitmodules  CMakeLists.txt  README.md  refs.bib  report.tex
resources/: depth_server.py
src/: BlurActor.cpp  BlurActor.h  BlurImpl.h  BoxBlurImpl.cpp  BoxBlurImpl.h  DepthMapActor.cpp  DepthMapActor.h  DepthMapImpl.h  FacialRecognitionActor.cpp  FacialRecognitionActor.h  FastBILDepthMapImpl.cpp  FastBILDepthMapImpl.h  FeatureMatchingActor.cpp  FeatureMatchingActor.h  GaussianBlurImpl.cpp  GaussianBlurImpl.h  MonoDepth2Impl.cpp  MonoDepth2Impl.h  ParDiscBlurImpl.cpp  ParDiscBlurImpl.h  ParGaussianBlurImpl.cpp  ParGaussianBlurImpl.h  StereoSGBMImpl.cpp  StereoSGBMImpl.h  bilateral_grid_simplified.cpp  fast_bilateral_solver.cpp  fast_bilateral_solver.h  main.cpp
